@@ -1,3 +1,5 @@
+[B]2.3.3[/B]
+- Poprawka: ogólne po zmianach na filmweb.pl
 [B]2.3.2[/B]
 - Poprawka: pobieranie polskiego tytułu
 [B]2.3.1[/B]
